--- a/index.html
+++ b/index.html
@@ -17,17 +17,25 @@
   <input type="text" id="message" placeholder="Enter your message">
   <button id="send-message">Send Message</button>
 
-  <script>
-    // Initialize Firebase
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      databaseURL: "YOUR_DATABASE_URL",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-      appId: "YOUR_APP_ID"
-    };
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyAeDub4lzMIfUxLlIHosFdKtT3T8n5hwT8",
+    authDomain: "d2r-chat.firebaseapp.com",
+    databaseURL: "https://d2r-chat-default-rtdb.firebaseio.com",
+    projectId: "d2r-chat",
+    storageBucket: "d2r-chat.appspot.com",
+    messagingSenderId: "206966326191",
+    appId: "1:206966326191:web:06472961563a70f099655a",
+    measurementId: "G-HXZ5MDL0T5"
+  };
 
     firebase.initializeApp(firebaseConfig);
 
