--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Community Chat</title>
+  <title>WEBXCHAT BY D2R</title>
   <meta charset="utf-8">
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 </head>
 <body>
-  <h1>Community Chat</h1>
+  <h1>WEBXCHAT-D2R</h1>
+  <h2>Please don't use fake names! It's a request from a noob programmer!!! Please.....</h2>
 
   <input type="text" id="username" placeholder="Enter your username">
   <button id="join-chat">Join Chat</button>
