--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 </head>
   <style>
+    .chat-message {
+  background-color: #eee;
+  padding: 10px;
+  margin-bottom: 10px;
+}
     #chat-messages {
   position: fixed;
   bottom: 0;
