--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 </head>
   <style>
-    .chat-message {
-  background-color: #eee;
-  padding: 10px;
-  margin-bottom: 10px;
-}
     #chat-messages {
-  position: fixed;
-  bottom: 0;
-}</style>
+      position: fixed;
+      bottom: 0;
+    }
+
+    .chat-message {
+      font-size: 20px;
+      background-color: #eee;
+      padding: 10px;
+      margin-bottom: 10px;
+    }
+  </style>
 <body>
   <h1>WEBXCHAT-D2R</h1>
   <h2>Please don't use fake names! It's a request from a noob programmer!!! Please.....</h2>
