--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
     }
 
     .chat-message {
-      font-size: 20px;
-      background-color: #eee;
-      padding: 10px;
+      display: flex;
+      align-items: center;
+    }
+
+    .chat-username {
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    .chat-message {
+      margin-top: 10px;
       margin-bottom: 10px;
     }
   </style>
