--- a/index.html
+++ b/index.html
@@ -6,18 +6,28 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 </head>
-  <style>
+ <style>
+
     #chat-messages {
       position: fixed;
       bottom: 0;
     }
+    .chat-username {
+      font-size: 24px;
+      font-weight: bold;
+    }
 
+    .chat-message {
+      display: flex;
+      align-items: center;
+    }
     .chat-message {
       font-size: 20px;
       background-color: #eee;
       padding: 10px;
       margin-bottom: 10px;
     }
+
   </style>
 <body>
   <h1>WEBXCHAT-D2R</h1>
