--- a/index.html
+++ b/index.html
@@ -1,103 +1,124 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>WEBXCHAT BY D2R</title>
- <meta charset="utf-8">
- <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
- <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+  <title>WEBXCHAT BY D2R</title>
+  <meta charset="utf-8">
+  <script
+ 
+src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+
+  
+<script
+ 
+src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 </head>
- <style>
-
+<style>
   #chat-messages {
-   position: fixed;
-   bottom: 0;
-   right: 100;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 500px;
+    overflow-y: scroll;
   }
-  .chat-username {
-   font-size: 40px;
-   font-weight: bold;
-  }
-
 
   .chat-message {
-   font-size: 20px;
-   background-color: #eee;
-   padding: 10px;
-   margin-bottom: 20px;
+    font-size: 20px;
+    background-color: #eee;
+    padding: 10px;
+    margin-bottom: 10px;
   }
 
- </style>
+  .chat-username {
+    font-size: 40px;
+    font-weight: bold;
+  }
+
+  input {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 10px;
+  }
+
+  #username {
+    border-bottom: 1px solid black;
+  }
+
+  #message {
+    border-top: 1px solid black;
+  }
+
+  #send-message {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    padding: 10px;
+  }
+
+</style>
 <body>
- <h1>WEBXCHAT-D2R</h1>
- <h2>Please don't use fake names! It's a request from a noob programmer!!! Please.....</h2>
 
- <input type="text" id="username" placeholder="Enter your username">
- <button id="join-chat">Join Chat</button>
+  <div id="chat-messages"></div>
 
- <div id="chat-messages"></div>
+  <input type="text" id="username" placeholder="Enter your username">
 
- <input type="text" id="message" placeholder="Enter your message">
- <button id="send-message">Send Message</button>
-<script src="display-messages.js"></script>
-<script type="module">
- // Import the functions you need from the SDKs you need
- import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
- import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-analytics.js";
- // TODO: Add SDKs for Firebase products that you want to use
- // https://firebase.google.com/docs/web/setup#available-libraries
+  <input type="text" id="message" placeholder="Enter your message">
 
- // Your web app's Firebase configuration
- // For Firebase JS SDK v7.20.0 and later, measurementId is optional
- const firebaseConfig = {
-  apiKey: "AIzaSyAeDub4lzMIfUxLlIHosFdKtT3T8n5hwT8",
-  authDomain: "d2r-chat.firebaseapp.com",
-  databaseURL: "https://d2r-chat-default-rtdb.firebaseio.com",
-  projectId: "d2r-chat",
-  storageBucket: "d2r-chat.appspot.com",
-  messagingSenderId: "206966326191",
-  appId: "1:206966326191:web:06472961563a70f099655a",
-  measurementId: "G-HXZ5MDL0T5"
- };
+  <button id="send-message">Send Message</button>
 
-  firebase.initializeApp(firebaseConfig);
+  <script src="display-messages.js"></script>
+  <script type="module">
 
-  // Get the Firestore database
-  const db = firebase.firestore();
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-analytics.js";
+    import { onSnapshot } from "https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js";
 
-  // Create a reference to the chat messages collection
-  const chatMessagesRef = db.collection("chat-messages");
+    const firebaseConfig = {
+      apiKey: "AIzaSyAeDub4lzMIfUxLlIHosFdKtT3T8n5hwT8",
+      authDomain: "d2r-chat.firebaseapp.com",
+      databaseURL: "https://d2r-chat-default-rtdb.firebaseio.com",
+      projectId: "d2r-chat",
+      storageBucket: "d2r-chat.appspot.com",
+      messagingSenderId: "206966326191",
+      appId: "1:206966326191:web:06472961563a70f099655a",
+      measurementId: "G-HXZ5MDL0T5"
+    };
 
-  // Listen for new chat messages
-  chatMessagesRef.onSnapshot((snapshot) => {
-   // Get the new chat messages
-   const newChatMessages = snapshot.docs;
+    firebase.initializeApp(firebaseConfig);
 
-   // Update the chat messages element with the new chat messages
-   const chatMessagesElement = document.getElementById("chat-messages");
-   chatMessagesElement.innerHTML = "";
+    const db = firebase.firestore();
 
-   for (const newChatMessage of newChatMessages) {
-    // Create a new chat message element
-    const chatMessageElement = document.createElement("div");
-    chatMessageElement.classList.add("chat-message");
+    const chatMessagesRef = db.collection("chat-messages");
 
-    // Set the chat message element's text
-    chatMessageElement.textContent = `${newChatMessage.data().username}: ${newChatMessage.data().message}`;
+    chatMessagesRef.onSnapshot((snapshot) => {
+      const newChatMessages = snapshot.docs;
 
-    // Add the chat message element to the chat messages element
-    chatMessagesElement.appendChild(chatMessageElement);
-   }
-  });
+      const chatMessagesElement = document.getElementById("chat-messages");
 
-  // Join the chat
-  document.getElementById("join-chat").addEventListener("click", () => {
-   const username = document.getElementById("username").value;
+      chatMessagesElement.innerHTML = "";
 
-   // Create a new chat message
-   const chatMessage = {
-    username,
-    message: "Joined the chat!"
-   };
+      for (const newChatMessage of newChatMessages) {
+        const chatMessageElement = document.createElement("div");
+
+        chatMessageElement.classList.add("chat-message");
+
+        chatMessageElement.textContent = `${newChatMessage.data().username}: ${newChatMessage.data().message}`;
+
+        chatMessagesElement.appendChild(chatMessageElement);
+      }
+
+      chatMessagesElement.scrollTop = chatMessagesElement.scrollHeight;
+    });
+
+    document.getElementById("join-chat").addEventListener("click", () => {
+      const username = document.getElementById("username").value;
+
+      const chatMessage = {
+        username,
+        message: "Joined the chat!"
+      };
 
    // Send the chat message to the Firestore database
    chatMessagesRef.add(chatMessage);
