--- a/index.html
+++ b/index.html
@@ -1,151 +1,259 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
-  <title>WEBXCHAT BY D2R</title>
-  <meta charset="utf-8">
-  <script
- 
-src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 
-  
-<script
- 
-src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+ <title>WEBXCHAT BY D2R</title>
+
+ <meta charset="utf-8">
+
+ <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+
+ <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
 </head>
-<style>
-  #chat-messages {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 500px;
-    overflow-y: scroll;
-  }
 
-  .chat-message {
-    font-size: 20px;
-    background-color: #eee;
-    padding: 10px;
-    margin-bottom: 10px;
-  }
+ <style>
 
-  .chat-username {
-    font-size: 40px;
-    font-weight: bold;
-  }
 
-  input {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 10px;
-  }
 
-  #username {
-    border-bottom: 1px solid black;
-  }
+ #chat-messages {
 
-  #message {
-    border-top: 1px solid black;
-  }
+  position: fixed;
 
-  #send-message {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    padding: 10px;
-  }
+  bottom: 0;
 
-</style>
+  right: 100;
+
+ }
+
+ .chat-username {
+
+  font-size: 40px;
+
+  font-weight: bold;
+
+ }
+
+
+
+
+
+ .chat-message {
+
+  font-size: 20px;
+
+  background-color: #eee;
+
+  padding: 10px;
+
+  margin-bottom: 20px;
+
+ }
+
+
+
+ </style>
+
 <body>
 
-  <div id="chat-messages"></div>
+ <h1>WEBXCHAT-D2R</h1>
 
-  <input type="text" id="username" placeholder="Enter your username">
+ <h2>Please don't use fake names! It's a request from a noob programmer!!! Please.....</h2>
 
-  <input type="text" id="message" placeholder="Enter your message">
 
-  <button id="send-message">Send Message</button>
 
-  <script src="display-messages.js"></script>
-  <script type="module">
+ <input type="text" id="username" placeholder="Enter your username">
 
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-analytics.js";
-    import { onSnapshot } from "https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js";
+ <button id="join-chat">Join Chat</button>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyAeDub4lzMIfUxLlIHosFdKtT3T8n5hwT8",
-      authDomain: "d2r-chat.firebaseapp.com",
-      databaseURL: "https://d2r-chat-default-rtdb.firebaseio.com",
-      projectId: "d2r-chat",
-      storageBucket: "d2r-chat.appspot.com",
-      messagingSenderId: "206966326191",
-      appId: "1:206966326191:web:06472961563a70f099655a",
-      measurementId: "G-HXZ5MDL0T5"
-    };
 
-    firebase.initializeApp(firebaseConfig);
 
-    const db = firebase.firestore();
+ <div id="chat-messages"></div>
 
-    const chatMessagesRef = db.collection("chat-messages");
 
-    chatMessagesRef.onSnapshot((snapshot) => {
-      const newChatMessages = snapshot.docs;
 
-      const chatMessagesElement = document.getElementById("chat-messages");
+ <input type="text" id="message" placeholder="Enter your message">
 
-      chatMessagesElement.innerHTML = "";
+ <button id="send-message">Send Message</button>
 
-      for (const newChatMessage of newChatMessages) {
-        const chatMessageElement = document.createElement("div");
+<script src="display-messages.js"></script>
 
-        chatMessageElement.classList.add("chat-message");
+<script type="module">
 
-        chatMessageElement.textContent = `${newChatMessage.data().username}: ${newChatMessage.data().message}`;
+ // Import the functions you need from the SDKs you need
 
-        chatMessagesElement.appendChild(chatMessageElement);
-      }
+ import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
 
-      chatMessagesElement.scrollTop = chatMessagesElement.scrollHeight;
-    });
+ import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-analytics.js";
 
-    document.getElementById("join-chat").addEventListener("click", () => {
-      const username = document.getElementById("username").value;
+ // TODO: Add SDKs for Firebase products that you want to use
 
-      const chatMessage = {
-        username,
-        message: "Joined the chat!"
-      };
+ // https://firebase.google.com/docs/web/setup#available-libraries
 
-   // Send the chat message to the Firestore database
-   chatMessagesRef.add(chatMessage);
-  });
 
-  // Send a message
-  document.getElementById("send-message").addEventListener("click", () => {
-   const message = document.getElementById("message").value;
 
-   // Create a new chat message
-   const chatMessage = {
-    username: document.getElementById("username").value,
-    message
-   };
+ // Your web app's Firebase configuration
 
-   // Send the chat message to the Firestore database
-   chatMessagesRef.add(chatMessage);
+ // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 
-   // Clear the message input
-   document.getElementById("message").value = "";
+ const firebaseConfig = {
 
-   window.addEventListener("scroll", () => {
+ apiKey: "AIzaSyAeDub4lzMIfUxLlIHosFdKtT3T8n5hwT8",
+
+ authDomain: "d2r-chat.firebaseapp.com",
+
+ databaseURL: "https://d2r-chat-default-rtdb.firebaseio.com",
+
+ projectId: "d2r-chat",
+
+ storageBucket: "d2r-chat.appspot.com",
+
+ messagingSenderId: "206966326191",
+
+ appId: "1:206966326191:web:06472961563a70f099655a",
+
+ measurementId: "G-HXZ5MDL0T5"
+
+ };
+
+
+
+ firebase.initializeApp(firebaseConfig);
+
+
+
+ // Get the Firestore database
+
+ const db = firebase.firestore();
+
+
+
+ // Create a reference to the chat messages collection
+
+ const chatMessagesRef = db.collection("chat-messages");
+
+
+
+ // Listen for new chat messages
+
+ chatMessagesRef.onSnapshot((snapshot) => {
+
+  // Get the new chat messages
+
+  const newChatMessages = snapshot.docs;
+
+
+
+  // Update the chat messages element with the new chat messages
+
+  const chatMessagesElement = document.getElementById("chat-messages");
+
+  chatMessagesElement.innerHTML = "";
+
+
+
+  for (const newChatMessage of newChatMessages) {
+
+  // Create a new chat message element
+
+  const chatMessageElement = document.createElement("div");
+
+  chatMessageElement.classList.add("chat-message");
+
+
+
+  // Set the chat message element's text
+
+  chatMessageElement.textContent = `${newChatMessage.data().username}: ${newChatMessage.data().message}`;
+
+
+
+  // Add the chat message element to the chat messages element
+
+  chatMessagesElement.appendChild(chatMessageElement);
+
+  }
+
+ });
+
+
+
+ // Join the chat
+
+ document.getElementById("join-chat").addEventListener("click", () => {
+
+  const username = document.getElementById("username").value;
+
+
+
+  // Create a new chat message
+
+  const chatMessage = {
+
+  username,
+
+  message: "Joined the chat!"
+
+  };
+
+
+
+  // Send the chat message to the Firestore database
+
+  chatMessagesRef.add(chatMessage);
+
+ });
+
+
+
+ // Send a message
+
+ document.getElementById("send-message").addEventListener("click", () => {
+
+  const message = document.getElementById("message").value;
+
+
+
+  // Create a new chat message
+
+  const chatMessage = {
+
+  username: document.getElementById("username").value,
+
+  message
+
+  };
+
+
+
+  // Send the chat message to the Firestore database
+
+  chatMessagesRef.add(chatMessage);
+
+
+
+  // Clear the message input
+
+  document.getElementById("message").value = "";
+
+
+
+  window.addEventListener("scroll", () => {
+
  const chatMessagesElement = document.getElementById("chat-messages");
+
  chatMessagesElement.scrollTop = chatMessagesElement.scrollHeight;
+
 });
-    
-  });
+
+   
+
+ });
+
  </script>
+
 </body>
+
 </html>
