--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
- <title>WEBXCHAT BY D2R</title>
+ <title>WEBXCHAT-The greatest Community chat you've ever seen!</title>
 
  <meta charset="utf-8">
 
@@ -27,9 +27,7 @@
  }
 
  .chat-username {
-
   font-size: 40px;
-
   font-weight: bold;
 
  }
@@ -40,6 +38,7 @@
 
  .chat-message {
   font-size: 20px;
+  font-family: fantasy; 
   background-color: #eee;
   padding: 10px;
   margin-bottom: 20px;
