--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
   // Create a new chat message
   const chatMessage = {
-  username: document.getElementById("username").value,
+  username:<br> document.getElementById("username").value,
   message
 
   };
