--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
 
   // Create a new chat message
   const chatMessage = {
-  username:<br> document.getElementById("username").value,
+  username:-
+ document.getElementById("username").value,
   message
 
   };
