--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
  }
 
 
-
-
-
  .chat-message {
   font-size: 20px;
   font-family: fantasy; 
@@ -44,6 +41,11 @@
   margin-bottom: 20px;
  }
 
+  .button {
+background-color: red;
+
+   
+  }
 
 
  </style>
@@ -177,8 +179,7 @@
 
   // Create a new chat message
   const chatMessage = {
-  username:-
- document.getElementById("username").value,
+  username: document.getElementById("username").value,
   message
 
   };
