--- a/index.html
+++ b/index.html
@@ -16,6 +16,28 @@
 
  <style>
 
+  h1 {
+  text-align: center;
+  margin: 0 auto;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  font-family: 'Arial', sans-serif;
+  font-style: italic;
+  font-weight: bold;
+  color: #fff;
+  background-color: #000;
+}
+
+   #join-chat {
+ background-color: #000;
+ color: #fff;
+ border-radius: 5px;
+ box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+ transition: background-color 0.5s ease;
+}
+
+#join-chat:hover {
+ background-color: #333;
+}
 
 
  #chat-messages {
@@ -41,7 +63,7 @@
   margin-bottom: 20px;
  }
 
-  .button {
+  .button id="join-chat"{
 background-color: red;
 
    
@@ -54,7 +76,7 @@ background-color: red;
 
  <h1>WEBXCHAT-D2R</h1>
 
- <h2>Please don't use fake names! It's a request from a noob programmer!!! Please.....</h2>
+ <marquee>Please don't use fake names! It's a request from a noob programmer!!! Please.....</marquee>
 
 
 
@@ -155,7 +177,7 @@ background-color: red;
 
   username,
 
-  message: "Joined the chat!"
+  message: "Entered into the chat"
 
   };
 
