--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 
   position: fixed;
   bottom: 0;
-  right: 0;
+  right: 100px;
+ 
 
  }
 
@@ -66,6 +67,7 @@
   position: fixed;
   bottom: 0;
   right: 100px;
+  font-weight: bold;
 }
   #join-chat {  
    position: fixed;
