--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 </head>
 
+ <style>
 #send-message {
  background-color: #000;
  color: #fff;
@@ -84,7 +85,10 @@ h1 {
  padding: 10px;
  margin-bottom: 20px;
  }
+</style>
 
+
+  
 <body>
 
  <h1>WEBXCHAT-D2R</h1>
