--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ h1 {
    
    
    // Set the chat message element's text
-  chatMessageElement.textContent = `${newChatMessage.data().username}, said: 
+  chatMessageElement.textContent = `${newChatMessage.data().username} said -  
   ${newChatMessage.data().message}`;
 
 
