--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ h1 {
    
    // Set the chat message element's text
  chatMessageElement.textContent = `${newChatMessage.data().username} said -  
- ${newChatMessage.data().message}/n`;
+ ${newChatMessage.data().message}\n`;
 
 
 
