--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@ h1 {
 
 #chat-messages {
  position: fixed;
-
+  font-size: 16px;
+  color: #000;
+  text-align: left;
+  margin-bottom: 5px;
+  padding: 5px;
+  background-color: #ccc;
+  border-radius: 5px;
   overflow-y: scroll;
   height: 700px;
  }
