--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@ h1 {
    
    
    // Set the chat message element's text
- chatMessageElement.textContent = `${newChatMessage.data().username} said -  
- ${newChatMessage.data().message}\n`;
+chatMessageElement.innerHTML = `<b>{newChatMessage.data().username}</b> said - <br> ${newChatMessage.data().message}`;
 
 
 
