--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ chatMessageElement.innerHTML = `${newChatMessage.data().username} said - <br> ${
 
   username,
 
-  message: "Entered into the chat"
+  message: ""I Just joined the chat!""
 
   };
 
