--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ chatMessageElement.innerHTML = `${newChatMessage.data().username} said - <br> ${
 
   username,
 
-  message: ""I Just joined the chat!""
+  message: "I Just joined the chat!"
 
   };
 
