--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
  // Import the functions you need from the SDKs you need
 
- import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
+ import { initializeApp } from "https://www.gstatic.com/firebasejs/9.20.0/firebase-app-compat.js";
 
- import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-analytics.js";
+ import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.20.0/firebase-firestore-compat.js";
 
  // TODO: Add SDKs for Firebase products that you want to use
 
