--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-firestore-compat.js"></script>
  
- <script type="module">
+<script type="module">
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-app.js";
   import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-analytics.js";
@@ -16,15 +16,19 @@
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   const firebaseConfig = {
-    apiKey: "AIzaSyAeDub4lzMIfUxLlIHosFdKtT3T8n5hwT8",
-    authDomain: "d2r-chat.firebaseapp.com",
-    databaseURL: "https://d2r-chat-default-rtdb.firebaseio.com",
-    projectId: "d2r-chat",
-    storageBucket: "d2r-chat.appspot.com",
-    messagingSenderId: "206966326191",
-    appId: "1:206966326191:web:06472961563a70f099655a",
-    measurementId: "G-HXZ5MDL0T5"
+    apiKey: "AIzaSyAIn4ZYNOx7SIyUPSOF33Oo7JqiQv03eoo",
+    authDomain: "webxchatd.firebaseapp.com",
+    projectId: "webxchatd",
+    storageBucket: "webxchatd.appspot.com",
+    messagingSenderId: "162184174166",
+    appId: "1:162184174166:web:33b5a740bcf9006d5639f7",
+    measurementId: "G-4FYVT0Z4VD"
   };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
