--- a/index.html
+++ b/index.html
@@ -4,38 +4,13 @@
   <title>Public Chat</title>
   <meta charset="UTF-8">
   <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-firestore-compat.js"></script>
- 
-<script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyAIn4ZYNOx7SIyUPSOF33Oo7JqiQv03eoo",
-    authDomain: "webxchatd.firebaseapp.com",
-    projectId: "webxchatd",
-    storageBucket: "webxchatd.appspot.com",
-    messagingSenderId: "162184174166",
-    appId: "1:162184174166:web:33b5a740bcf9006d5639f7",
-    measurementId: "G-4FYVT0Z4VD"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-</script>
+  <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-firestore-compat.js"></script> 1 
 </head>
 <body>
-  <h1>Public Chat</h1>
+  <h1>Webxchat</h1>
   <div id="chat-messages"></div>
   <input type="text" id="message" placeholder="Enter your message">
   <button id="send-message">Send</button>
   <script src="script.js"></script>
-
 </body>
 </html>
