--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Public Chat</title>
   <meta charset="UTF-8">
   <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-firestore-compat.js"></script> 1 
+  <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-firestore-compat.js"></script>  
 </head>
 <body>
   <h1>Webxchat</h1>
