--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <input type="text" id="message" placeholder="Enter your message">
   <button id="send-message">Send Message</button>
-<script src="display-messages.js"></script>
+<script src="script.js"></script>
 <script type="module">
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
