--- a/index.html
+++ b/index.html
@@ -1,113 +1,30 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>WEBXCHAT BY D2R</title>
-  <meta charset="utf-8">
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-</head>
-  <style>
-    #chat-messages {
-  position: fixed;
-  bottom: 0;
-}</style>
-<body>
-  <h1>WEBXCHAT-D2R</h1>
-  <h2>Please don't use fake names! It's a request from a noob programmer!!! Please.....</h2>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Firebase RealTime Chat</title>
+    <link rel="stylesheet" href="./index.css">
+  </head>
+  <body>
+    <header>
+      <h2>Firebase RealTime Chat</h2>
+    </header>
+    
+    <div id="chat">
+      <!-- messages will display here -->
+      <ul id="messages"></ul>
 
-  <input type="text" id="username" placeholder="Enter your username">
-  <button id="join-chat">Join Chat</button>
+      <!-- form to send message -->
+      <form id="message-form">
+        <input id="message-input" type="text" />
+        <button id="message-btn" type="submit">Send</button>
+      </form>
+    </div>
 
-  <div id="chat-messages"></div>
-
-  <input type="text" id="message" placeholder="Enter your message">
-  <button id="send-message">Send Message</button>
-<script src="script.js"></script>
-<script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-  apiKey: "AIzaSyAIn4ZYNOx7SIyUPSOF33Oo7JqiQv03eoo",
-  authDomain: "webxchatd.firebaseapp.com",
-  projectId: "webxchatd",
-  storageBucket: "webxchatd.appspot.com",
-  messagingSenderId: "162184174166",
-  appId: "1:162184174166:web:33b5a740bcf9006d5639f7",
-  measurementId: "G-4FYVT0Z4VD"
-  };
-
-    firebase.initializeApp(firebaseConfig);
-
-    // Get the Firestore database
-    const db = firebase.firestore();
-
-    // Create a reference to the chat messages collection
-    const chatMessagesRef = db.collection("chat-messages");
-
-    // Listen for new chat messages
-    chatMessagesRef.onSnapshot((snapshot) => {
-      // Get the new chat messages
-      const newChatMessages = snapshot.docs;
-
-      // Update the chat messages element with the new chat messages
-      const chatMessagesElement = document.getElementById("chat-messages");
-      chatMessagesElement.innerHTML = "";
-
-      for (const newChatMessage of newChatMessages) {
-        // Create a new chat message element
-        const chatMessageElement = document.createElement("div");
-        chatMessageElement.classList.add("chat-message");
-
-        // Set the chat message element's text
-        chatMessageElement.textContent = `${newChatMessage.data().username}: ${newChatMessage.data().message}`;
-
-        // Add the chat message element to the chat messages element
-        chatMessagesElement.appendChild(chatMessageElement);
-      }
-    });
-
-    // Join the chat
-    document.getElementById("join-chat").addEventListener("click", () => {
-      const username = document.getElementById("username").value;
-
-      // Create a new chat message
-      const chatMessage = {
-        username,
-        message: "Joined the chat!"
-      };
-
-      // Send the chat message to the Firestore database
-      chatMessagesRef.add(chatMessage);
-    });
-
-    // Send a message
-    document.getElementById("send-message").addEventListener("click", () => {
-      const message = document.getElementById("message").value;
-
-      // Create a new chat message
-      const chatMessage = {
-        username: document.getElementById("username").value,
-        message
-      };
-
-      // Send the chat message to the Firestore database
-      chatMessagesRef.add(chatMessage);
-
-      // Clear the message input
-      document.getElementById("message").value = "";
-
-      window.addEventListener("scroll", () => {
-  const chatMessagesElement = document.getElementById("chat-messages");
-  chatMessagesElement.scrollTop = chatMessagesElement.scrollHeight;
-});
-      
-    });
-  </script>
-</body>
+    <!-- scripts -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
+    <script src="index.js"></script>
+  </body>
 </html>
